feat(fdr): language-specific config for generateLibraryDocs API (#8141)
